<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <View
        android:layout_width="31dp"
        android:layout_height="3dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="5dp"
        android:background="#EBEBEB" />

    <ImageView
        android:id="@+id/btnRateBottomSheetCancel"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_gravity="end"
        android:layout_margin="5dp"
        android:padding="5dp"
        android:src="@drawable/close"
        tools:ignore="ContentDescription" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="30dp"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:paddingBottom="16dp">

        <TextView
            android:id="@+id/textRateBottomSheetTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rate_popup_title"
            android:textColor="?android:attr/textColorPrimary"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textRateBottomSheetMessage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            android:text="@string/rate_popup_message"
            android:textColor="?android:attr/textColorPrimary"
            android:textSize="15sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/btnRateBottomSheetNo"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:maxWidth="100dp"
                android:text="@string/rate_popup_no"
                android:textColor="?android:attr/textColorPrimary"
                android:textSize="13sp"
                android:textStyle="bold" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/btnRateBottomSheetLater"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:maxWidth="100dp"
                android:text="@string/rate_popup_later"
                android:textColor="?android:attr/textColorPrimary"
                android:textSize="13sp"
                android:textStyle="bold" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btnRateBottomSheetOk"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:maxWidth="100dp"
                android:paddingStart="16dp"
                android:paddingTop="4dp"
                android:paddingEnd="16dp"
                android:paddingBottom="4dp"
                android:text="@string/rate_popup_ok"
                android:textAllCaps="false"
                android:textColor="@android:color/white"
                android:textSize="13sp"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

</FrameLayout>